Fixing some horrible mistakes

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -931,18 +931,7 @@ CNC_democratic_ADJ:0 "Griffonian"
 CNC_neutrality_ADJ:0 "Griffonian"
 CNC_communism_ADJ:0 "Griffonian"
 
-MOR_neutrality:0 "Morien"
-MOR_neutrality_DEF:0 "Morien"
-MOR_fascism:0 "Morien"
-MOR_fascism_DEF:0 "Morien"
-MOR_communism:0 "Morien"
-MOR_communism_DEF:0 "Morien"
-MOR_democratic:0 "Morien"
-MOR_democratic_DEF:0 "Morien"
-MOR_fascism_ADJ:0 "Dog"
-MOR_democratic_ADJ:0 "Dog"
-MOR_neutrality_ADJ:0 "Dog"
-MOR_communism_ADJ:0 "Dog"
+#MOR in replace/tdr_eaw_countries_overrides_l_english.yml
 
 #########################label
 # Southwest #
@@ -1000,18 +989,18 @@ SIA_democratic_ADJ:0 "Test Country"
 SIA_neutrality_ADJ:0 "Test Country"
 SIA_communism_ADJ:0 "Test Country"
 
-DRA_fascism:0 "Test Country"
-DRA_fascism_DEF:0 "Test Country"
-DRA_democratic:0 "Dragon's Corner"
-DRA_democratic_DEF:0 "Test Country"
-DRA_neutrality:1 "Dragon's Corner"
-DRA_neutrality_DEF:1 "Test Country"
-DRA_communism:0 "Test Country"
-DRA_communism_DEF:0 "Test Country"
-DRA_fascism_ADJ:0 "Test Country"
-DRA_democratic_ADJ:0 "Test Country"
-DRA_neutrality_ADJ:0 "Test Country"
-DRA_communism_ADJ:0 "Test Country"
+DRC_fascism:0 "Test Country"
+DRC_fascism_DEF:0 "Test Country"
+DRC_democratic:0 "Dragon's Corner"
+DRC_democratic_DEF:0 "Test Country"
+DRC_neutrality:1 "Dragon's Corner"
+DRC_neutrality_DEF:1 "Test Country"
+DRC_communism:0 "Test Country"
+DRC_communism_DEF:0 "Test Country"
+DRC_fascism_ADJ:0 "Test Country"
+DRC_democratic_ADJ:0 "Test Country"
+DRC_neutrality_ADJ:0 "Test Country"
+DRC_communism_ADJ:0 "Test Country"
 
 #########################label
 ## Not real countries ###
