--- a/localisation/replace/tdr_eaw_countries_overrides_l_english.yml
+++ b/localisation/replace/tdr_eaw_countries_overrides_l_english.yml
@@ -191,10 +191,10 @@ PNG_communism:0 "Pingland"
 PNG_communism_DEF:0 ""
 PNG_democratic:0 "Pingland Republic"
 PNG_democratic_DEF:0 "Pingland Republic"
-PNG_fascism_ADJ:0 "Penguin"
-PNG_democratic_ADJ:0 "Penguin"
-PNG_neutrality_ADJ:0 "Penguin"
-PNG_communism_ADJ:0 "Penguin"
+PNG_fascism_ADJ:0 "Pinglands"
+PNG_democratic_ADJ:0 "Pinglands"
+PNG_neutrality_ADJ:0 "Pinglands"
+PNG_communism_ADJ:0 "Pinglands"
 
 #########################label
 # Former Nova Griffonia #
@@ -224,3 +224,16 @@ GFF_fascism_ADJ:0 "Griffonian"
 GFF_democratic_ADJ:0 "Griffonian"
 GFF_neutrality_ADJ:0 "Griffonian"
 GFF_communism_ADJ:0 "Griffonian"
+
+MOR_neutrality:0 "Morien"
+MOR_neutrality_DEF:0 "Morien"
+MOR_fascism:0 "Morien"
+MOR_fascism_DEF:0 "Morien"
+MOR_communism:0 "Morien"
+MOR_communism_DEF:0 "Morien"
+MOR_democratic:0 "Morien"
+MOR_democratic_DEF:0 "Morien"
+MOR_fascism_ADJ:0 "Moriens"
+MOR_democratic_ADJ:0 "Moriens"
+MOR_neutrality_ADJ:0 "Moriens"
+MOR_communism_ADJ:0 "Moriens"
