Added 9 countries ( 5 in Confederacy )
MNT - Moontown
FRV - Fairville
HRF - Hornfield
GLP - Gallopolis
ZAR - Zarechje
PND - Ponderosa
TRL - Trotland
HFC - Hoofcity
SRH - SiresHollow

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -271,6 +271,60 @@ STR_democratic_ADJ:0 "Stratusburg"
 STR_neutrality_ADJ:0 "Stratusburg"
 STR_communism_ADJ:0 "Stratusburg"
 
+#MNT in replace/tdr_eaw_countries_overrides_l_english.yml
+ 
+FRV_neutrality:0 "Fairville"
+FRV_neutrality_DEF:0 "Fairville"
+FRV_fascism:0 "Fairville"
+FRV_fascism_DEF:0 "Fairville"
+FRV_communism:0 "Fairville"
+FRV_communism_DEF:0 "Fairville"
+FRV_democratic:0 "Fairville"
+FRV_democratic_DEF:0 "Fairville"
+FRV_fascism_ADJ:0 "Fairville"
+FRV_democratic_ADJ:0 "Fairville"
+FRV_neutrality_ADJ:0 "Fairville"
+FRV_communism_ADJ:0 "Fairville"
+
+HRF_neutrality:0 "Hornfield"
+HRF_neutrality_DEF:0 "Hornfield"
+HRF_fascism:0 "Hornfield"
+HRF_fascism_DEF:0 "Hornfield"
+HRF_communism:0 "Hornfield"
+HRF_communism_DEF:0 "Hornfield"
+HRF_democratic:0 "Hornfield"
+HRF_democratic_DEF:0 "Hornfield"
+HRF_fascism_ADJ:0 "Hornfield"
+HRF_democratic_ADJ:0 "Hornfield"
+HRF_neutrality_ADJ:0 "Hornfield"
+HRF_communism_ADJ:0 "Hornfield"
+
+GLP_neutrality:0 "Gallopolis"
+GLP_neutrality_DEF:0 "Gallopolis"
+GLP_fascism:0 "Gallopolis"
+GLP_fascism_DEF:0 "Gallopolis"
+GLP_communism:0 "Gallopolis"
+GLP_communism_DEF:0 "Gallopolis"
+GLP_democratic:0 "Gallopolis"
+GLP_democratic_DEF:0 "Gallopolis"
+GLP_fascism_ADJ:0 "Gallopolis"
+GLP_democratic_ADJ:0 "Gallopolis"
+GLP_neutrality_ADJ:0 "Gallopolis"
+GLP_communism_ADJ:0 "Gallopolis"
+
+ZAR_neutrality:0 "Zarechje"
+ZAR_neutrality_DEF:0 "Zarechje"
+ZAR_fascism:0 "Zarechje"
+ZAR_fascism_DEF:0 "Zarechje"
+ZAR_communism:0 "Zarechje"
+ZAR_communism_DEF:0 "Zarechje"
+ZAR_democratic:0 "Zarechje"
+ZAR_democratic_DEF:0 "Zarechje"
+ZAR_fascism_ADJ:0 "Zarechje"
+ZAR_democratic_ADJ:0 "Zarechje"
+ZAR_neutrality_ADJ:0 "Zarechje"
+ZAR_communism_ADJ:0 "Zarechje"
+
 ##################label
 # West Equestria #
 ##################
@@ -482,6 +536,58 @@ RCV_neutrality_ADJ:0 "Rockvillean"
 RCV_communism_ADJ:0 "Rockvillean"
 
 #LSP in replace/tdr_eaw_countries_overrides_l_english.yml
+
+PND_neutrality:0 "Ponderosa"
+PND_neutrality_DEF:0 "Ponderosa"
+PND_fascism:0 "Ponderosa"
+PND_fascism_DEF:0 "Ponderosa"
+PND_communism:0 "Ponderosa"
+PND_communism_DEF:0 "Ponderosa"
+PND_democratic:0 "Ponderosa"
+PND_democratic_DEF:0 "Ponderosa"
+PND_fascism_ADJ:0 "Ponderosa"
+PND_democratic_ADJ:0 "Ponderosa"
+PND_neutrality_ADJ:0 "Ponderosa"
+PND_communism_ADJ:0 "Ponderosa"
+
+TRL_neutrality:0 "Trotland"
+TRL_neutrality_DEF:0 "Trotland"
+TRL_fascism:0 "Trotland"
+TRL_fascism_DEF:0 "Trotland"
+TRL_communism:0 "Trotland"
+TRL_communism_DEF:0 "Trotland"
+TRL_democratic:0 "Trotland"
+TRL_democratic_DEF:0 "Trotland"
+TRL_fascism_ADJ:0 "Trotland"
+TRL_democratic_ADJ:0 "Trotland"
+TRL_neutrality_ADJ:0 "Trotland"
+TRL_communism_ADJ:0 "Trotland"
+
+HFC_neutrality:0 "Hoofcity"
+HFC_neutrality_DEF:0 "Hoofcity"
+HFC_fascism:0 "Hoofcity"
+HFC_fascism_DEF:0 "Hoofcity"
+HFC_communism:0 "Hoofcity"
+HFC_communism_DEF:0 "Hoofcity"
+HFC_democratic:0 "Hoofcity"
+HFC_democratic_DEF:0 "Hoofcity"
+HFC_fascism_ADJ:0 "Hoofcity"
+HFC_democratic_ADJ:0 "Hoofcity"
+HFC_neutrality_ADJ:0 "Hoofcity"
+HFC_communism_ADJ:0 "Hoofcity"
+
+SRH_neutrality:0 "SiresHollow"
+SRH_neutrality_DEF:0 "SiresHollow"
+SRH_fascism:0 "SiresHollow"
+SRH_fascism_DEF:0 "SiresHollow"
+SRH_communism:0 "SiresHollow"
+SRH_communism_DEF:0 "SiresHollow"
+SRH_democratic:0 "SiresHollow"
+SRH_democratic_DEF:0 "SiresHollow"
+SRH_fascism_ADJ:0 "SiresHollow"
+SRH_democratic_ADJ:0 "SiresHollow"
+SRH_neutrality_ADJ:0 "SiresHollow"
+SRH_communism_ADJ:0 "SiresHollow"
 
 ##############label
 # North-West #
