--- a/localisation/replace/state_names_overrides_l_english.yml
+++ b/localisation/replace/state_names_overrides_l_english.yml
@@ -216,7 +216,7 @@
  STATE_215:0 "STATE_215"
  STATE_216:0 "STATE_216"
  STATE_217:0 "STATE_217"
- STATE_218:0 "STATE_218"
+ STATE_218:0 "South Trotland"
  STATE_219:0 "Trotland"
  STATE_220:0 "STATE_220"
  STATE_221:0 "STATE_221"
@@ -366,7 +366,7 @@
  STATE_365:0 "STATE_365"
  STATE_366:0 "STATE_366"
  STATE_367:0 "STATE_367"
- STATE_368:0 "STATE_368"
+ STATE_368:0 "North Ponderosa"
  STATE_369:0 "STATE_369"
  STATE_370:0 "STATE_370"
  STATE_371:0 "STATE_371"
@@ -395,7 +395,7 @@
  STATE_394:0 "STATE_394"
  STATE_395:0 "STATE_395"
  STATE_396:0 "Applewood"
- STATE_397:0 "Prancisco"
+ STATE_397:0 "San Flankcisco"
  STATE_398:0 "STATE_398"
  STATE_399:0 "STATE_399"
  STATE_400:0 "Fillydelphia"
@@ -450,8 +450,8 @@
  STATE_449:0 "STATE_449"
  STATE_450:0 "Manehattan"
  STATE_451:0 "Manehatan"
- STATE_452:0 "STATE_452"
- STATE_453:0 "STATE_453"
+ STATE_452:0 "Fairville"
+ STATE_453:0 "Moontown"
  STATE_454:0 "Canterbury"
  STATE_455:0 "North Canterbury"
  STATE_456:0 "Prance"
@@ -468,7 +468,7 @@
  STATE_467:0 "STATE_467"
  STATE_468:0 "Summerfield"
  STATE_469:0 "STATE_469"
- STATE_470:0 "STATE_470"
+ STATE_470:0 "Gallopolis"
  STATE_471:0 "STATE_471"
  STATE_472:0 "STATE_472"
  STATE_473:0 "STATE_473"
@@ -733,18 +733,18 @@
  STATE_732:0 "STATE_732"
  STATE_733:0 "STATE_733"
  STATE_734:0 "STATE_734"
- STATE_735:0 "STATE_735"
+ STATE_735:0 "Hornfield"
  STATE_736:0 "STATE_736"
  STATE_737:0 "STATE_737"
  STATE_738:0 "STATE_738"
- STATE_739:0 "STATE_739"
+ STATE_739:0 "Kobilyakovo"
  STATE_740:0 "Kobilkyno"
  STATE_741:0 "STATE_741"
- STATE_742:0 "STATE_742"
+ STATE_742:0 "Veliky Southgorod"
  STATE_743:0 "STATE_743"
  STATE_744:0 "STATE_744"
  STATE_745:0 "STATE_745"
- STATE_746:0 "STATE_746"
+ STATE_746:0 "Ponchiki"
  STATE_747:0 "STATE_747"
  STATE_748:0 "Baical"
  STATE_749:0 "STATE_749"
