--- a/localisation/replace/state_names_overrides_l_english.yml
+++ b/localisation/replace/state_names_overrides_l_english.yml
@@ -414,7 +414,7 @@
  STATE_413:0 "STATE_413"
  STATE_414:0 "STATE_414"
  STATE_415:0 "STATE_415"
- STATE_416:0 "STATE_416"
+ STATE_416:0 "Chicoltgo"
  STATE_417:0 "STATE_417"
  STATE_418:0 "STATE_418"
  STATE_419:0 "STATE_419"
@@ -444,7 +444,7 @@
  STATE_443:0 "Dappleshore"
  STATE_444:0 "Southern Poninsula"
  STATE_445:0 "Northern Poninsula"
- STATE_446:0 "STATE_446"
+ STATE_446:0 "Tail Tale"
  STATE_447:0 "STATE_447"
  STATE_448:0 "STATE_448"
  STATE_449:0 "STATE_449"
@@ -491,7 +491,7 @@
  STATE_490:0 "STATE_490"
  STATE_491:0 "STATE_491"
  STATE_492:0 "STATE_492"
- STATE_493:0 "STATE_493"
+ STATE_493:0 "Foallerminster"
  STATE_494:0 "STATE_494"
  STATE_495:0 "STATE_495"
  STATE_496:0 "STATE_496"
