--- a/localisation/replace/tdr_eaw_countries_overrides_l_english.yml
+++ b/localisation/replace/tdr_eaw_countries_overrides_l_english.yml
@@ -77,6 +77,19 @@ MAN_democratic_ADJ:0 "Manehattan"
 MAN_neutrality_ADJ:0 "Manehattan"
 MAN_communism_ADJ:0 "Manehattan"
 
+CHI_neutrality:0 "Chicoltgo"
+CHI_neutrality_DEF:0 "Chicoltgo"
+CHI_fascism:0 "Chicoltgo"
+CHI_fascism_DEF:0 "Chicoltgo"
+CHI_communism:0 "Chicoltgo"
+CHI_communism_DEF:0 "Chicoltgo"
+CHI_democratic:0 "Chicoltgo"
+CHI_democratic_DEF:0 "Chicoltgo"
+CHI_fascism_ADJ:0 "Chicoltgo"
+CHI_democratic_ADJ:0 "Chicoltgo"
+CHI_neutrality_ADJ:0 "Chicoltgo"
+CHI_communism_ADJ:0 "Chicoltgo"
+
 BRI_neutrality:0 "Bridlepolis"
 BRI_neutrality_DEF:0 "Bridlepolis"
 BRI_fascism:0 "Bridlepolis"
