--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -102,6 +102,12 @@ VICTORY_POINTS_9978:0 "Novocrystal'sk"
 #######################################################################
 # Nova Griffonia ######################################################
 #######################################################################
+VICTORY_POINTS_13510:0 "Chicoltgo"
+VICTORY_POINTS_3917:0 "West Chicoltgo"
+
+#######################################################################
+# Nova Griffonia ######################################################
+#######################################################################
 # Weter
 
 
