Loc formatting, minifixes.

--- a/localisation/replace/tdr_eaw_countries_overrides_l_russian.yml
+++ b/localisation/replace/tdr_eaw_countries_overrides_l_russian.yml
@@ -1,1 +1,291 @@
-﻿
+﻿l_russian:
+
+#####################label
+# Equestrian company #
+#####################
+EQS_neutrality:0 "Equestria"
+EQS_neutrality_DEF:0 "Equestria"
+EQS_fascism:0 "Equestrian State"
+EQS_fascism_DEF:0 "The Equestrian State"
+EQS_communism:0 "Socialist Republic of Equestria"
+EQS_communism_DEF:0 "The Socialist Republic of Equestria"
+EQS_democratic:0 "Equestria"
+EQS_democratic_DEF:0 "Equestria"
+EQS_fascism_ADJ:0 "Equestrian"
+EQS_democratic_ADJ:0 "Equestrian"
+EQS_neutrality_ADJ:0 "Equestrian"
+EQS_communism_ADJ:0 "Equestrian"
+
+#########################label
+# Former Crystal Empire #
+#########################
+CRY_neutrality:0 ""
+CRY_neutrality_DEF:0 ""
+CRY_fascism:0 "Crystal Empire"
+CRY_fascism_DEF:0 "The Crystal Empire"
+CRY_communism:0 ""
+CRY_communism_DEF:0 ""
+CRY_democratic:0 ""
+CRY_democratic_DEF:0 ""
+CRY_fascism_ADJ:0 "Crystal"
+CRY_democratic_ADJ:0 "Crystal"
+CRY_neutrality_ADJ:0 "Crystal"
+CRY_communism_ADJ:0 "Crystal"
+
+##################label
+# East Equestria #
+##################
+STL_neutrality:0 "Starlight's Town"
+STL_neutrality_DEF:0 "Starlight's Town"
+STL_fascism:0 ""
+STL_fascism_DEF:0 ""
+STL_communism:0 ""
+STL_communism_DEF:0 ""
+STL_democratic:0 ""
+STL_democratic_DEF:0 ""
+STL_fascism_ADJ:0 "Severian"
+STL_democratic_ADJ:0 "Severian"
+STL_neutrality_ADJ:0 "Severian"
+STL_communism_ADJ:0 "Severian"
+
+################################label
+# East Equestria # Confederacy #
+################################
+ALB_neutrality:0 "Albion"
+ALB_neutrality_DEF:0 "Albion"
+ALB_fascism:0 "Albion"
+ALB_fascism_DEF:0 "Albion"
+ALB_communism:0 "Albion"
+ALB_communism_DEF:0 "Albion"
+ALB_democratic:0 "Albion"
+ALB_democratic_DEF:0 "Albion"
+ALB_fascism_ADJ:0 "Albionian"
+ALB_democratic_ADJ:0 "Albionian"
+ALB_neutrality_ADJ:0 "Albionian"
+ALB_communism_ADJ:0 "Albionian"
+
+MAN_neutrality:0 "Manehattan"
+MAN_neutrality_DEF:0 "Manehattan"
+MAN_fascism:0 "Manehattan"
+MAN_fascism_DEF:0 "Manehattan"
+MAN_communism:0 "Manehattan"
+MAN_communism_DEF:0 "Manehattan"
+MAN_democratic:0 "Manehattan"
+MAN_democratic_DEF:0 "Manehattan"
+MAN_fascism_ADJ:0 "Manehattan"
+MAN_democratic_ADJ:0 "Manehattan"
+MAN_neutrality_ADJ:0 "Manehattan"
+MAN_communism_ADJ:0 "Manehattan"
+
+CHI_neutrality:0 "Chicoltgo"
+CHI_neutrality_DEF:0 "Chicoltgo"
+CHI_fascism:0 "Chicoltgo"
+CHI_fascism_DEF:0 "Chicoltgo"
+CHI_communism:0 "Chicoltgo"
+CHI_communism_DEF:0 "Chicoltgo"
+CHI_democratic:0 "Chicoltgo"
+CHI_democratic_DEF:0 "Chicoltgo"
+CHI_fascism_ADJ:0 "Chicoltgo"
+CHI_democratic_ADJ:0 "Chicoltgo"
+CHI_neutrality_ADJ:0 "Chicoltgo"
+CHI_communism_ADJ:0 "Chicoltgo"
+
+BRI_neutrality:0 "Bridlepolis"
+BRI_neutrality_DEF:0 "Bridlepolis"
+BRI_fascism:0 "Bridlepolis"
+BRI_fascism_DEF:0 "Bridlepolis"
+BRI_communism:0 "Bridlepolis"
+BRI_communism_DEF:0 "Bridlepolis"
+BRI_democratic:0 "Bridlepolis"
+BRI_democratic_DEF:0 "Bridlepolis"
+BRI_fascism_ADJ:0 "Bridlepolis"
+BRI_democratic_ADJ:0 "Bridlepolis"
+BRI_neutrality_ADJ:0 "Bridlepolis"
+BRI_communism_ADJ:0 "Bridlepolis"
+
+MNT_neutrality:0 "Moontown"
+MNT_neutrality_DEF:0 "Moontown"
+MNT_fascism:0 "Moontown"
+MNT_fascism_DEF:0 "Moontown"
+MNT_communism:0 "Moontown"
+MNT_communism_DEF:0 "Moontown"
+MNT_democratic:0 "Moontown"
+MNT_democratic_DEF:0 "Moontown"
+MNT_fascism_ADJ:0 "Moontown"
+MNT_democratic_ADJ:0 "Moontown"
+MNT_neutrality_ADJ:0 "Moontown"
+MNT_communism_ADJ:0 "Moontown"
+
+##################label
+# West Equestria #
+##################
+ANG_neutrality:0 "Angren"
+ANG_neutrality_DEF:0 ""
+ANG_fascism:0 ""
+ANG_fascism_DEF:0 ""
+ANG_communism:0 ""
+ANG_communism_DEF:0 ""
+ANG_democratic:0 ""
+ANG_democratic_DEF:0 ""
+ANG_fascism_ADJ:0 ""
+ANG_democratic_ADJ:0 ""
+ANG_neutrality_ADJ:0 ""
+ANG_communism_ADJ:0 ""
+
+##############label
+# South-East #
+##############
+BAL_neutrality:0 "Kingdom of Baltimare"
+BAL_neutrality_DEF:0 "Kingdom of Baltimare"
+BAL_fascism:0 "Baltimare Governorate"
+BAL_fascism_DEF:0 "The Governorate of Baltimare"
+BAL_communism:0 "Baltimare Republic"
+BAL_communism_DEF:0 "The Workers' Republic of Baltimare"
+BAL_democratic:0 "Baltimare Region"
+BAL_democratic_DEF:0 "The Baltimare Region"
+BAL_fascism_ADJ:0 "Baltimarean"
+BAL_democratic_ADJ:0 "Baltimarean"
+BAL_neutrality_ADJ:0 "Baltimarean"
+BAL_communism_ADJ:0 "Baltimarean"
+
+DRG_neutrality:0 "Dragon Empire"
+DRG_neutrality_DEF:0 "Dragon Empire"
+DRG_fascism:0 "Dragon Empire"
+DRG_fascism_DEF:0 "The Dragon Empire"
+DRG_communism:0 "Union of Dragon Communes"
+DRG_communism_DEF:0 "The Union of Dragon Communes"
+DRG_democratic:0 "United Dragon Isles"
+DRG_democratic_DEF:0 "The United Dragon Isles"
+DRG_fascism_ADJ:0 "Draconian"
+DRG_democratic_ADJ:0 "Draconian"
+DRG_neutrality_ADJ:0 "Draconian"
+DRG_communism_ADJ:0 "Draconian"
+
+##############label
+# South-West #
+##############
+LSP_neutrality:0 "Las Pegasus"
+LSP_neutrality_DEF:0 "Las Pegasus"
+LSP_fascism:0 "Las Pegasus"
+LSP_fascism_DEF:0 "Las Pegasus"
+LSP_communism:0 "Las Pegasus"
+LSP_communism_DEF:0 "Las Pegasus"
+LSP_democratic:0 "Las Pegasus"
+LSP_democratic_DEF:0 "Las Pegasus"
+LSP_fascism_ADJ:0 "Las Pegasusian"
+LSP_democratic_ADJ:0 "Las Pegasusian"
+LSP_neutrality_ADJ:0 "Las Pegasusian"
+LSP_communism_ADJ:0 "Las Pegasusian"
+
+CAN_neutrality:0 "Canter's Confederation"
+CAN_neutrality_DEF:0 "Canter's Confederation"
+CAN_fascism:0 "Canter's Confederation"
+CAN_fascism_DEF:0 "Canter's Confederation"
+CAN_communism:0 "Canter's Confederation"
+CAN_communism_DEF:0 "Canter's Confederation"
+CAN_democratic:0 "Canter's Confederation"
+CAN_democratic_DEF:0 "Canter's Confederation"
+CAN_fascism_ADJ:0 "Canter's Confederation"
+CAN_democratic_ADJ:0 "Canter's Confederation"
+CAN_neutrality_ADJ:0 "Canter's Confederation"
+CAN_communism_ADJ:0 "Canter's Confederation"
+
+##############label
+# North-West #
+##############
+OLE_neutrality:0 "Olengaard"
+OLE_neutrality_DEF:0 ""
+OLE_fascism:0 ""
+OLE_fascism_DEF:0 ""
+OLE_communism:0 ""
+OLE_communism_DEF:0 ""
+OLE_democratic:0 ""
+OLE_democratic_DEF:0 ""
+OLE_fascism_ADJ:0 ""
+OLE_democratic_ADJ:0 ""
+OLE_neutrality_ADJ:0 ""
+OLE_communism_ADJ:0 ""
+
+#########label
+# North #
+#########
+YAK_neutrality:0 ""
+YAK_neutrality_DEF:0 ""
+YAK_fascism:0 ""
+YAK_fascism_DEF:0 ""
+YAK_communism:0 ""
+YAK_communism_DEF:0 ""
+YAK_democratic:0 "Crossmountain Republic"
+YAK_democratic_DEF:0 "The Crossmountain Republic"
+YAK_fascism_ADJ:0 "Yak"
+YAK_democratic_ADJ:0 "Yak"
+YAK_neutrality_ADJ:0 "Yak"
+YAK_communism_ADJ:0 "Yak"
+
+PNG_neutrality:0 "Pingland"
+PNG_neutrality_DEF:0 "Kingdom of Pingland"
+PNG_fascism:0 "Pingland"
+PNG_fascism_DEF:0 ""
+PNG_communism:0 "Pingland"
+PNG_communism_DEF:0 ""
+PNG_democratic:0 "Pingland Republic"
+PNG_democratic_DEF:0 "Pingland Republic"
+PNG_fascism_ADJ:0 "Pinglands"
+PNG_democratic_ADJ:0 "Pinglands"
+PNG_neutrality_ADJ:0 "Pinglands"
+PNG_communism_ADJ:0 "Pinglands"
+
+PLB_neutrality:0 "Polar Bear Communities"
+PLB_fascism:0 "Polar Bear Communities"
+PLB_communism:0 "Polar Bear Socialist Communities"
+PLB_democratic:0 "Polar Bear Communities"
+PLB_neutrality_DEF:0 "The Polar Bear Communities"
+PLB_fascism_DEF:0 "The Polar Bear Communities"
+PLB_communism_DEF:0 "The Polar Bear Socialist Communities"
+PLB_democratic_DEF:0 "The Polar Bear Communities"
+PLB_fascism_ADJ:0 "Polar Bear"
+PLB_democratic_ADJ:0 "Polar Bear"
+PLB_neutrality_ADJ:0 "Polar Bear"
+PLB_communism_ADJ:0 "Polar Bear"
+
+#########################label
+# Former Nova Griffonia #
+#########################
+GRF_neutrality:0 "Monarchist Restoration Front"
+GRF_neutrality_DEF:0 "Monarchist Restoration Front"
+GRF_fascism:0 "Nova Griffonia"
+GRF_fascism_DEF:0 "Nova Griffonian Dictatorship"
+GRF_communism:0 "Griffonian Liberation Front"
+GRF_communism_DEF:0 "Griffonian Liberation Front"
+GRF_democratic:0 ""
+GRF_democratic_DEF:0 ""
+GRF_fascism_ADJ:0 "Griffonian"
+GRF_democratic_ADJ:0 "Griffonian"
+GRF_neutrality_ADJ:0 "Griffonian"
+GRF_communism_ADJ:0 "Griffonian"
+
+GFF_neutrality:0 "Frontier"
+GFF_neutrality_DEF:0 "Griffonian Frontier"
+GFF_fascism:0 "Frontier"
+GFF_fascism_DEF:0 ""
+GFF_communism:0 "Frontier"
+GFF_communism_DEF:0 ""
+GFF_democratic:0 "Frontier"
+GFF_democratic_DEF:0 ""
+GFF_fascism_ADJ:0 "Griffonian"
+GFF_democratic_ADJ:0 "Griffonian"
+GFF_neutrality_ADJ:0 "Griffonian"
+GFF_communism_ADJ:0 "Griffonian"
+
+MOR_neutrality:0 "Morien"
+MOR_neutrality_DEF:0 "Morien"
+MOR_fascism:0 "Morien"
+MOR_fascism_DEF:0 "Morien"
+MOR_communism:0 "Morien"
+MOR_communism_DEF:0 "Morien"
+MOR_democratic:0 "Morien"
+MOR_democratic_DEF:0 "Morien"
+MOR_fascism_ADJ:0 "Moriens"
+MOR_democratic_ADJ:0 "Moriens"
+MOR_neutrality_ADJ:0 "Moriens"
+MOR_communism_ADJ:0 "Moriens"
