Severiana cities done. + Some loc fixes

--- a/localisation/replace/state_names_overrides_l_english.yml
+++ b/localisation/replace/state_names_overrides_l_english.yml
@@ -725,10 +725,10 @@
  STATE_724:0 "Albion"
  STATE_725:0 "STATE_725"
  STATE_726:0 "STATE_726"
- STATE_727:0 "STATE_727"
+ STATE_727:0 "Zelenogradsk"
  STATE_728:0 "Somland"
  STATE_729:0 "STATE_729"
- STATE_730:0 "STATE_730"
+ STATE_730:0 "Tikhorechenskoye"
  STATE_731:0 "Lesnoye"
  STATE_732:0 "STATE_732"
  STATE_733:0 "STATE_733"
@@ -757,12 +757,12 @@
  STATE_756:0 "STATE_756"
  STATE_757:0 "STATE_757"
  STATE_758:0 "STATE_758"
- STATE_759:0 "STATE_759"
+ STATE_759:0 "Novokopitsk"
  STATE_760:0 "STATE_760"
  STATE_761:0 "Krupochkino"
- STATE_762:0 "STATE_762"
+ STATE_762:0 "Nizhny Novokopitsk"
  STATE_763:0 "Novochernushsk"
- STATE_764:0 "STATE_764"
+ STATE_764:0 "Severskoye"
  STATE_765:0 "STATE_765"
  STATE_766:0 "STATE_766"
  STATE_767:0 "STATE_767"
@@ -771,17 +771,17 @@
  STATE_770:0 "STATE_770"
  STATE_771:0 "STATE_771"
  STATE_772:0 "STATE_772"
- STATE_773:0 "STATE_773"
+ STATE_773:0 "East Porridge Town"
  STATE_774:0 "STATE_774"
  STATE_775:0 "STATE_775"
  STATE_776:0 "STATE_776"
  STATE_777:0 "St. Petershoof"
- STATE_778:0 "STATE_778"
+ STATE_778:0 "Skakunsk"
  STATE_779:0 "STATE_779"
- STATE_780:0 "STATE_780"
+ STATE_780:0 "Sedlovsk"
  STATE_781:0 "STATE_781"
  STATE_782:0 "STATE_782"
- STATE_783:0 "STATE_783"
+ STATE_783:0 "Pluga"
  STATE_784:0 "Trottingham"
  STATE_785:0 "STATE_785"
  STATE_786:0 "Azkaban"
@@ -792,7 +792,7 @@
  STATE_791:0 "Sladkiy"
  STATE_792:0 "STATE_792"
  STATE_793:0 "Konzan"
- STATE_794:0 "STATE_794"
+ STATE_794:0 "Stremiaslavl"
  STATE_795:0 "STATE_795"
  STATE_796:0 "STATE_796"
  STATE_797:0 "STATE_797"
@@ -800,7 +800,7 @@
  STATE_799:0 "STATE_799"
  STATE_800:0 "Severgrad"
  STATE_801:0 "STATE_801"
- STATE_802:0 "STATE_802"
+ STATE_802:0 "Revoltsovo"
  STATE_803:0 "STATE_803"
  STATE_804:0 "Zayatsk"
  STATE_805:0 "St. Altidiysk"
@@ -813,7 +813,7 @@
  STATE_812:0 "STATE_812"
  STATE_813:0 "STATE_813"
  STATE_814:0 "STATE_814"
- STATE_815:0 "STATE_815"
+ STATE_815:0 "Koshkino"
  STATE_816:0 "STATE_816"
  STATE_817:0 "STATE_817"
  STATE_818:0 "STATE_818"
