--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -41,7 +41,7 @@ VICTORY_POINTS_12592:0 "South Hjortland"
 VICTORY_POINTS_3598:0 "South-West Hjortland"
 
 # Other cities
-
+VICTORY_POINTS_2651:0 "Porridge Town"
 #######################################################################
 # Severiana ###########################################################
 #######################################################################
@@ -69,34 +69,34 @@ VICTORY_POINTS_11254:0 "North Severokholm"
 VICTORY_POINTS_4599:0 "South Severokholm"
 VICTORY_POINTS_11624:0 "Krasnoye Serdtse"
 VICTORY_POINTS_25:0 "Somland"
-VICTORY_POINTS_12244:0 "12244"
+VICTORY_POINTS_12244:0 "Zelenogradsk"
 VICTORY_POINTS_11984:0 "Mirazh"
-VICTORY_POINTS_12129:0 "12129"
+VICTORY_POINTS_12129:0 "Tikhorechenskoye"
 VICTORY_POINTS_199:0 "Bordo"
 VICTORY_POINTS_12120:0 "Kobilkyno"
-VICTORY_POINTS_4369:0 "4369"
+VICTORY_POINTS_4369:0 "Novokopitsk"
 VICTORY_POINTS_11883:0 "Baical"
-VICTORY_POINTS_394:0 "394"
-VICTORY_POINTS_11299:0 "11299"
+VICTORY_POINTS_394:0 "Severskoye"
+VICTORY_POINTS_11299:0 "East Porridge Town"
 VICTORY_POINTS_11638:0 "Novochernushsk"
 VICTORY_POINTS_4725:0 "East Novochernushsk"
 VICTORY_POINTS_5132:0 "West Krupochkino"
 VICTORY_POINTS_5346:0 "East Krupochkino"
-VICTORY_POINTS_3549:0 "3549"
-VICTORY_POINTS_11338:0 "11338"
-VICTORY_POINTS_2970:0 "2970"
-VICTORY_POINTS_1768:0 "1768"
-VICTORY_POINTS_4808:0 "4808"
+VICTORY_POINTS_3549:0 "Nizhny Novokopitsk"
+VICTORY_POINTS_11338:0 "Skakunsk"
+VICTORY_POINTS_2970:0 "South Sedlovsk"
+VICTORY_POINTS_1768:0 "Sedlovsk"
+VICTORY_POINTS_4808:0 "Pluga"
 VICTORY_POINTS_10895:0 "West Trottingham"
 VICTORY_POINTS_10896:0 "East Trottingham"
 VICTORY_POINTS_10676:0 "Sladkiy"
-VICTORY_POINTS_3216:0 "Konzan"
-VICTORY_POINTS_10674:0 "10674"
-VICTORY_POINTS_2108:0 "2108"
-VICTORY_POINTS_4:0 "4"
-VICTORY_POINTS_11011:0 "11011"
+VICTORY_POINTS_3227:0 "Konzan"
+VICTORY_POINTS_10674:0 "Revoltsovo"
+VICTORY_POINTS_2108:0 "East Revoltsovo"
+VICTORY_POINTS_4:0 "West Revoltsovo"
+VICTORY_POINTS_11011:0 "Stremiaslavl"
 VICTORY_POINTS_10696:0 "St. Altidiysk"
-VICTORY_POINTS_2895:0 "2895"
+VICTORY_POINTS_2895:0 "Koshkino"
 VICTORY_POINTS_9805:0 "Heringsdorf"
 VICTORY_POINTS_9849:0 "Town Up North"
 VICTORY_POINTS_9978:0 "Novocrystal'sk"
