--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -81,7 +81,7 @@ DOL_fascism:0 ""
 DOL_fascism_DEF:0 ""
 DOL_communism:0 ""
 DOL_communism_DEF:0 ""
-DOL_democratic:0 ""
+DOL_democratic:0 "Dol Blathanna"
 DOL_democratic_DEF:0 ""
 DOL_fascism_ADJ:0 ""
 DOL_democratic_ADJ:0 ""
