Some Severiana tweaks/fixes.

--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -47,6 +47,10 @@ VICTORY_POINTS_2651:0 "Porridge Town"
 #######################################################################
 # St. Petershoof
 VICTORY_POINTS_11373:0 "St. Petershoof"
+VICTORY_POINTS_11354:0 "Petergof"
+VICTORY_POINTS_3332:0 "Petershoof Airport"
+VICTORY_POINTS_11265:0 "East Petershoof"
+VICTORY_POINTS_11442:0 "South Petershoof"
 
 # Ravenskoye
 VICTORY_POINTS_10479:0 "Ravensky Port"
