--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -12,6 +12,29 @@ VICTORY_POINTS_13297:0 "South Canterlot"
 
 # Other cities
 
+
+
+
+#######################################################################
+# West Equestrian Shore ###############################################
+#######################################################################
+VICTORY_POINTS_5453:0 "New Vesalipolis"
+VICTORY_POINTS_13134:0 "South New Vesalipolis"
+VICTORY_POINTS_13088:0 "West New Vesalipolis"
+VICTORY_POINTS_13043:0 "North New Vesalipolis"
+VICTORY_POINTS_13098:0 "East New Vesalipolis"
+VICTORY_POINTS_2099:0 "Raspberry Grove"
+VICTORY_POINTS_13418:0 "West Raspberry Grove"
+VICTORY_POINTS_13305:0 "Colorado"
+VICTORY_POINTS_13304:0 "West Colorado"
+VICTORY_POINTS_13374:0 "South Colorado"
+VICTORY_POINTS_4912:0 "Fleatsam"
+VICTORY_POINTS_4991:0 "Aphidburg"
+VICTORY_POINTS_13255:0 "Mitefield"
+VICTORY_POINTS_13086:0 "Applewood"
+VICTORY_POINTS_13017:0 "San Flankcisco"
+VICTORY_POINTS_12995:0 "North San Flankcisco"
+VICTORY_POINTS_2595:0 "South San Flankcisco"
 #######################################################################
 # Crystal Empire ######################################################
 #######################################################################
