--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -397,7 +397,7 @@ BRM_democratic_ADJ:0 ""
 BRM_neutrality_ADJ:0 ""
 BRM_communism_ADJ:0 ""
 
-KER_neutrality:0 "Kerack"
+KER_neutrality:0 "Monarchy Of Fykia"
 KER_neutrality_DEF:0 ""
 KER_fascism:0 ""
 KER_fascism_DEF:0 ""
@@ -462,7 +462,7 @@ MHK_democratic_ADJ:0 ""
 MHK_neutrality_ADJ:0 ""
 MHK_communism_ADJ:0 ""
 
-CID_neutrality:0 "Cidaris"
+CID_neutrality:0 "Kingdom Of Pearls"
 CID_neutrality_DEF:0 ""
 CID_fascism:0 ""
 CID_fascism_DEF:0 ""
