--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -371,7 +371,7 @@ ZAR_communism_ADJ:0 "Zarechje"
 ##################
 #ANG in replace/tdr_eaw_countries_overrides_l_english.yml
 
-VRD_neutrality:0 "Verden"
+VRD_neutrality:0 "Wirtdun"
 VRD_neutrality_DEF:0 ""
 VRD_fascism:0 ""
 VRD_fascism_DEF:0 ""
@@ -384,7 +384,7 @@ VRD_democratic_ADJ:0 ""
 VRD_neutrality_ADJ:0 ""
 VRD_communism_ADJ:0 ""
 
-BRM_neutrality:0 "Bremervoord"
+BRM_neutrality:0 "Feudatory Acadia"
 BRM_neutrality_DEF:0 ""
 BRM_fascism:0 ""
 BRM_fascism_DEF:0 ""
@@ -423,7 +423,7 @@ TEM_democratic_ADJ:0 ""
 TEM_neutrality_ADJ:0 ""
 TEM_communism_ADJ:0 ""
 
-SOD_neutrality:0 "Sodden"
+SOD_neutrality:0 "Sorreland"
 SOD_neutrality_DEF:0 ""
 SOD_fascism:0 ""
 SOD_fascism_DEF:0 ""
@@ -462,7 +462,7 @@ MHK_democratic_ADJ:0 ""
 MHK_neutrality_ADJ:0 ""
 MHK_communism_ADJ:0 ""
 
-CID_neutrality:0 "Kingdom Of Pearls"
+CID_neutrality:0 "Parel"
 CID_neutrality_DEF:0 ""
 CID_fascism:0 ""
 CID_fascism_DEF:0 ""
@@ -475,7 +475,7 @@ CID_democratic_ADJ:0 ""
 CID_neutrality_ADJ:0 ""
 CID_communism_ADJ:0 ""
 
-BRG_neutrality:0 "Brugge"
+BRG_neutrality:0 "Acornage"
 BRG_neutrality_DEF:0 ""
 BRG_fascism:0 ""
 BRG_fascism_DEF:0 ""
